# qt-hearts

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  qml.qrc  qt-hearts.pro  resources.qrc
data/: qt-hearts.desktop
data/sounds/: README
include/: card.h  cardimageprovider.h  carditem.h  cardtheme.h  deck.h  game.h  gamebridge.h  gameview.h  mainwindow.h  player.h  smoothanimationdriver.h  soundengine.h
qml/: CardBack.qml  CardItem.qml  GameBoard.qml  GameOverlay.qml  Main.qml  MessageBanner.qml  OpponentHand.qml  PassArrow.qml  PlayerHand.qml  Scoreboard.qml  TrickArea.qml
src/: card.cpp  cardimageprovider.cpp  carditem.cpp  cardtheme.cpp  deck.cpp  game.cpp  gamebridge.cpp  gameview.cpp  main.cpp  mainwindow.cpp  player.cpp  smoothanimationdriver.cpp  soundengine.cpp
